# Basera

./: .gitignore  ARCHITECTURE.md  OPTIMIZATIONS.md  PERFORMANCE_REMEDIATION.md  README.md  REFACTORING_HISTORY.md  TODO.md  fix_styles.py  pyproject.toml
native_engine/: Cargo.toml  pyproject.toml
native_engine/shaders/: blend.wgsl
native_engine/src/: blend.rs  lib.rs  tile_store.rs
native_engine/src/gpu/: mod.rs
photo_editor/: __init__.py  __main__.py  app.py
photo_editor/adjustments/: __init__.py  adjustment_base.py  black_white.py  brightness_contrast.py  channel_mixer.py  color_balance.py  curves.py  exposure.py  gradient_map.py  hue_saturation.py  invert.py  levels.py  normals.py  photo_filter.py  posterize.py  recolor.py  selective_color.py  split_toning.py  threshold.py  vibrance.py  white_balance.py
photo_editor/blending/: __init__.py  blend_modes.py  blending_engine.py  color_blend.py  comparative.py  contrast.py  darken.py  lighten.py  normal.py
photo_editor/color/: __init__.py  conversions.py  gradients.py  harmonies.py  manager.py  (+1 more)
plan/: performance_redesign_plan.md  phase_a_implementation.md  phase_b_implementation.md  phase_c_implementation.md
tests/: __init__.py  debug_svg_import.py  reproduce_svg_issues.py  test_adjustments.py  test_adjustments_levels_hue.py  test_all_svgs.py  test_app_signals.py  test_bb_move_tool.py  test_blending.py  test_canvas_view.py  test_commands.py  test_controller_base.py  test_curves_adjustment.py  test_document_creation.py  test_document_resize.py  test_document_session.py  test_effects.py  test_effects_pipeline.py  test_export_pipeline.py  test_gpu_backend.py  test_guide_ui_state.py  test_history_optimizations.py  test_image_pool.py  test_layer_panel_state.py  test_layers_panel_comprehensive.py  test_layers_panel_logic.py  test_layers_panel_ui.py  test_main_window_smoke.py  test_processors.py  test_rasterize_guard.py  test_registries.py  test_render_worker.py  test_save_load.py  test_selection_ui_state.py  test_shortcuts.py  test_svg_gradient_fill.py  test_svg_opacity_filter.py  test_svg_parser.py  test_tile_processor.py  test_vector_ui_state.py
(+388 files in other folders)
