[project]
name = "photo-editor"
version = "0.1.0"
description = "Professional-grade Photoshop-style photo editor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.2.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    "abr>=0.0.15",
    "atom>=0.12.1",
    "attrs>=25.4.0",
    "bytecode>=0.17.0",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "enaml>=0.19.0",
    "fonttools>=4.61.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pegen>=0.3.0",
    "psd-tools>=1.12.2",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "qtpy>=2.4.3",
    "scipy>=1.17.1",
    "six>=1.17.0",
    "tzdata>=2025.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
photo-editor = "photo_editor.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
]
